<resources>
    <string name="app_name">KeepeR</string>
    <string name="title_incidents">Incidents</string>
    <string name="title_Messages">Messages</string>
    <string name="add_message_title">New Message</string>
    <string name="edit_message_title">Edit Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fullName">Full Name</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="go_to_sign_up">Do not have a user yet?</string>
    <string name="go_to_login">Aleardy signed up?</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bitcoin_api_key">ae9a979e-796b-44ff-af02-83499829158f</string>
</resources>